clang/test/BSC/Negative/Trait/r1/definition_4/definition_4.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F {
  int foo(This* this, int a);
};

trait F* bar(trait F* i, int a) {
  i->foo(42);
  return i;
}

struct S{
  int x;
};

int struct S::foo(struct S* this) {
  return this->x;
}

impl trait F for struct S; // expected-warning {{incompatible function pointer types initializing 'int (*)(void *, int)' with an expression of type 'int (*)(void *)'}} 
                           // expected-error@-1 {{type of 'foo' conflicts with that of 'trait F'}} 

int main() {
  struct S s1 = { .x = 42 };
  return 1;
};
